--- a/src/main/resources/templates/dashboard/restaurant/index.html
+++ b/src/main/resources/templates/dashboard/restaurant/index.html
@@ -312,11 +312,11 @@
                                         </td>
                                         <td class="text-center">778 Wall Street, New York, NY, USA</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/9"
+                                            <a href="../admin/restaurant/9"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/9/edit"
+                                            <a href="../admin/restaurant/9/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -358,11 +358,11 @@
                                         </td>
                                         <td class="text-center">196 Spring St Soho, New York City, USA</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/8"
+                                            <a href="../admin/restaurant/8"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/8/edit"
+                                            <a href="../admin/restaurant/8/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -404,11 +404,11 @@
                                         </td>
                                         <td class="text-center">15 Ta Hien, Hang Buom, Hoan Kiem, Hanoi</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/7"
+                                            <a href="../admin/restaurant/7"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/7/edit"
+                                            <a href="../admin/restaurant/7/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -450,11 +450,11 @@
                                         </td>
                                         <td class="text-center">2nd Floor, 20 Bat Dan Street Hang Bo Ward, Hanoi, Vietnam</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/6"
+                                            <a href="../admin/restaurant/6"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/6/edit"
+                                            <a href="../admin/restaurant/6/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -496,11 +496,11 @@
                                         </td>
                                         <td class="text-center">112 Sonntag, Berlin, Germany</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/5"
+                                            <a href="../admin/restaurant/5"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/5/edit"
+                                            <a href="../admin/restaurant/5/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -542,11 +542,11 @@
                                         </td>
                                         <td class="text-center">12 Hang Bac Hanoi Old Quarter, Hoan Kiem, Hanoi</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/4"
+                                            <a href="../admin/restaurant/4"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/4/edit"
+                                            <a href="../admin/restaurant/4/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -588,11 +588,11 @@
                                         </td>
                                         <td class="text-center">11B Hang Khay | Alley | Level 3 Hoan Kiem, Hanoi Vietnam</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/3"
+                                            <a href="../admin/restaurant/3"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/3/edit"
+                                            <a href="../admin/restaurant/3/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -634,11 +634,11 @@
                                         </td>
                                         <td class="text-center">35-4, Insadong-gil, Jongno-gu, Seoul, South Korea</td>
                                         <td class="text-center">
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/2"
+                                            <a href="../admin/restaurant/2"
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/restaurant/2/edit"
+                                            <a href="../admin/restaurant/2/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -686,7 +686,7 @@
                     &laquo; Previous
                 </span>
 
-                                        <a href="http://127.0.0.1:8000/admin/restaurant?page=2" class="relative inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 rounded-md hover:text-gray-500 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
+                                        <a href="../admin/restaurant?page=2" class="relative inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 rounded-md hover:text-gray-500 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
                                             Next &raquo;
                                         </a>
                                     </div>
@@ -722,12 +722,12 @@
                                                                                                                         <span aria-current="page">
                                         <span class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 cursor-default leading-5">1</span>
                                     </span>
-                                                                                                                                <a href="http://127.0.0.1:8000/admin/restaurant?page=2" class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 hover:text-gray-500 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150" aria-label="Go to page 2">
+                                                                                                                                <a href="../admin/restaurant?page=2" class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 hover:text-gray-500 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150" aria-label="Go to page 2">
                                         2
                                     </a>
                                                                                                         
                     
-                                            <a href="http://127.0.0.1:8000/admin/restaurant?page=2" rel="next" class="relative inline-flex items-center px-2 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md leading-5 hover:text-gray-400 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Next &amp;raquo;">
+                                            <a href="../admin/restaurant?page=2" rel="next" class="relative inline-flex items-center px-2 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md leading-5 hover:text-gray-400 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Next &amp;raquo;">
                             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                             </svg>
