--- a/src/main/resources/templates/dashboard/user/index.html
+++ b/src/main/resources/templates/dashboard/user/index.html
@@ -290,6 +290,7 @@
                                         <th class="text-center">Phone</th>
                                         <th class="text-center">City</th>
                                         <th class="text-center">Active</th>
+                                        <th class="text-center">Actions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -321,7 +322,7 @@
                                         <td class="text-center">staff_c.codedy@gmail.com</td>
                                         <td class="text-center">Staff</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -333,7 +334,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/12/edit"
+                                            <a href="../admin/user/12/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -380,7 +381,7 @@
                                         <td class="text-center">ThiDK@fpt.edu.vn </td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -392,7 +393,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/11/edit"
+                                            <a href="../admin/user/11/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -439,7 +440,7 @@
                                         <td class="text-center">HieuNDTH1908028@fpt.edu.vn</td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -451,7 +452,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/10/edit"
+                                            <a href="../admin/user/10/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -498,7 +499,7 @@
                                         <td class="text-center">HungNPMTH1908050@fpt.edu.vn</td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -510,7 +511,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/9/edit"
+                                            <a href="../admin/user/9/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -557,7 +558,7 @@
                                         <td class="text-center">HuyVQTH1909003@fpt.edu.vn</td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -569,7 +570,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/8/edit"
+                                            <a href="../admin/user/8/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -616,7 +617,7 @@
                                         <td class="text-center">AnhNTTH1908059@fpt.edu.vn</td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -628,7 +629,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/7/edit"
+                                            <a href="../admin/user/7/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -675,7 +676,7 @@
                                         <td class="text-center">codedy.demo@gmail.com</td>
                                         <td class="text-center">Customer</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -687,7 +688,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/6/edit"
+                                            <a href="../admin/user/6/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -734,7 +735,7 @@
                                         <td class="text-center">staff_b.codedy@gmail.com</td>
                                         <td class="text-center">Staff</td>
                                         <td class="text-center">0868 6633 15</td>
-                                        <td class="text-center"></td>
+                                        <td class="text-center">Ha Noi</td>
                                         <td class="text-center">
                                             <div
                                                     class="badge badge-success mt-2">
@@ -746,7 +747,7 @@
                                                class="btn btn-hover-shine btn-outline-primary border-0 btn-sm">
                                                 Details
                                             </a>
-                                            <a href="http://127.0.0.1:8000/admin/user/5/edit"
+                                            <a href="../admin/user/5/edit"
                                                data-toggle="tooltip" title="Edit"
                                                data-placement="bottom" class="btn btn-outline-warning border-0 btn-sm">
                                                         <span class="btn-icon-wrapper opacity-8">
@@ -791,7 +792,7 @@
                     &laquo; Previous
                 </span>
 
-                                        <a href="http://127.0.0.1:8000/admin/user?page=2" class="relative inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 rounded-md hover:text-gray-500 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
+                                        <a href="../admin/user?page=2" class="relative inline-flex items-center px-4 py-2 ml-3 text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 rounded-md hover:text-gray-500 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
                                             Next &raquo;
                                         </a>
                                     </div>
@@ -827,12 +828,12 @@
                                                                                                                         <span aria-current="page">
                                         <span class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 cursor-default leading-5">1</span>
                                     </span>
-                                                                                                                                <a href="http://127.0.0.1:8000/admin/user?page=2" class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 hover:text-gray-500 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150" aria-label="Go to page 2">
+                                                                                                                                <a href="../admin/user?page=2" class="relative inline-flex items-center px-4 py-2 -ml-px text-sm font-medium text-gray-700 bg-white border border-gray-300 leading-5 hover:text-gray-500 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150" aria-label="Go to page 2">
                                         2
                                     </a>
                                                                                                         
                     
-                                            <a href="http://127.0.0.1:8000/admin/user?page=2" rel="next" class="relative inline-flex items-center px-2 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md leading-5 hover:text-gray-400 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Next &amp;raquo;">
+                                            <a href="../admin/user?page=2" rel="next" class="relative inline-flex items-center px-2 py-2 -ml-px text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md leading-5 hover:text-gray-400 focus:z-10 focus:outline-none focus:ring ring-gray-300 focus:border-blue-300 active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Next &amp;raquo;">
                             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                             </svg>
